<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/main_menu_item_add_new"
        android:id="@+id/main_menu_item_add_new"
        android:icon="@mipmap/ic_add"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/main_menu_item_share"
        android:id="@+id/main_menu_item_share"
        android:icon="@mipmap/ic_share"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/main_menu_item_logout"
        android:id="@+id/main_menu_item_logout"
        android:icon="@mipmap/ic_exit"
        app:showAsAction="never" />
    <item
        android:title="@string/main_menu_item_about"
        android:id="@+id/main_menu_item_about"
        app:showAsAction="never" />
</menu>